<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@android:color/black" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textViewCurrentContactSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabUrgent"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:backgroundTint="@color/urgent"
        android:clickable="true"
        android:fadingEdgeLength="1dp"
        android:focusable="true"
        app:backgroundTint="@color/shadow"
        app:elevation="10dp"
        app:fabCustomSize="@dimen/fab_size"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.15"
        app:maxImageSize="@dimen/fab_img_size"
        app:srcCompat="@drawable/ic_urgent_notif_white_18dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAlarming"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:backgroundTint="@color/alarm"
        android:clickable="true"
        android:fadingEdgeLength="1dp"
        android:focusable="true"
        app:backgroundTint="@color/shadow"
        app:elevation="10dp"
        app:fabCustomSize="@dimen/fab_size"
        app:layout_constraintBottom_toTopOf="@+id/fabWarning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabUrgent"
        app:maxImageSize="@dimen/fab_img_size"
        app:srcCompat="@drawable/ic_report_white_18dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabWarning"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:backgroundTint="@color/warning"
        android:clickable="true"
        android:fadingEdgeLength="1dp"
        android:focusable="true"
        app:backgroundTint="@color/shadow"
        app:elevation="10dp"
        app:fabCustomSize="@dimen/fab_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:maxImageSize="@dimen/fab_img_size"
        app:srcCompat="@drawable/ic_error_outline_black_18dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonContact1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:gravity="center"
            android:maxEms="8"
            android:minEms="8"
            android:text="@string/button" />

        <Button
            android:id="@+id/buttonContact2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:gravity="center"
            android:maxEms="8"
            android:minEms="8"
            android:text="@string/button" />

        <Button
            android:id="@+id/buttonContact3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:gravity="center"
            android:maxEms="8"
            android:minEms="8"
            android:text="@string/button" />
    </LinearLayout>

    <TextView
        android:id="@+id/textUrgent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0.5dp"
        android:layout_marginTop="8.5dp"
        android:elevation="10dp"
        android:fadingEdgeLength="1dp"
        android:text="@string/urgent"
        android:textColor="@color/shadow"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabUrgent" />

    <TextView
        android:id="@+id/textUrgent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:fadingEdgeLength="1dp"
        android:text="@string/urgent"
        android:textColor="@color/urgent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabUrgent" />

    <TextView
        android:id="@+id/textAlarming2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0.5dp"
        android:layout_marginTop="8.5dp"
        android:elevation="10dp"
        android:fadingEdgeLength="1dp"
        android:text="@string/alarming"
        android:textColor="@color/shadow"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabAlarming" />

    <TextView
        android:id="@+id/textAlarming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:fadingEdgeLength="1dp"
        android:text="@string/alarming"
        android:textColor="@color/alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabAlarming" />

    <TextView
        android:id="@+id/textWarning2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0.5dp"
        android:layout_marginTop="8.5dp"
        android:elevation="10dp"
        android:text="@string/warning"
        android:textColor="@color/shadow"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabWarning" />

    <TextView
        android:id="@+id/textWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:text="@string/warning"
        android:textColor="@color/warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabWarning" />

</androidx.constraintlayout.widget.ConstraintLayout>